[package]
name = "cipher-paratime"
version = "2.0.0-alpha3"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2018"
license = "Apache-2.0"
resolver = "2"

[package.metadata.fortanix-sgx]
heap-size = 134217728
stack-size = 2097152
threads = 6
debug = false

[dependencies]
oasis-runtime-sdk = { git = "https://github.com/oasisprotocol/oasis-sdk", branch = "main" }
module-contracts = { git = "https://github.com/oasisprotocol/oasis-sdk", branch = "main", package = "oasis-runtime-sdk-contracts" }

# for elf2sgxs
[target.x86_64-fortanix-unknown-sgx.dependencies]
fortanix-sgx-tools = "0.4.0"
sgxs-tools = "0.8.2"
oasis-core-tools = { git = "https://github.com/oasisprotocol/oasis-core", branch = "master" }
